--- a/Super-Book-Store/Views/Shared/_Layout.cshtml
+++ b/Super-Book-Store/Views/Shared/_Layout.cshtml
@@ -6,13 +6,15 @@
     <title>@ViewData["Title"] - Super_Book_Store</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
+    <link rel="stylesheet" href="~/css/w3.css" asp-append-version="true" />
+
     <link rel="stylesheet" href="~/Super_Book_Store.styles.css" asp-append-version="true" />
 </head>
 <body>
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container-fluid">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">Super_Book_Store</a>
+                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index"><b>Super Book Store</b></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -22,9 +24,7 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
-                        </li>
+                        
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="BookType" asp-action="Index">Loại Sách</a>
                             <a class="nav-link text-dark items" asp-area="" asp-controller="BookType" asp-action="Create">Thêm Loại Sách</a>
@@ -51,7 +51,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2023 - Super_Book_Store - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+            &copy; 2023 - Super_Book_Store - <a asp-area="" asp-controller="Home" asp-action="Privacy">NHÓM 4</a>
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
